Sforce8 Project Data/src/objects/KanjoKamoku__c.object
<CustomObject>
    <fields>
        <fullName>KanjoHojocode__c</fullName>
        <label>補助科目コード</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KanjoHojoname__c</fullName>
        <label>補助科目名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KanjocodeCode__c</fullName>
        <label>勘定科目コード</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kanjocode__c</fullName>
        <label>Seq#</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>会計科目</label>
    <nameField>
        <label>会計科目名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>